my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WTEMPLATEIS/WTEMPLATEIS.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WTEMPLATEIS.dml:17:5: warning WTEMPLATEIS: prefer 'is' statement outside template braces, 'template ... is (x, y) {'
